# Games202SDL

./: .gitignore  3rdparty.cmake  CMakeLists.txt  CMakePresets.json  Games202.props  Games202.sln  README.md
cmake/: copy.cmake
hw0/: hw0.vcxproj  hw0.vcxproj.filters
hw0/assets/hw0/shader/: light.frag  phong.vert  phong1.frag  test.frag
hw0/assets/shader/: phong.frag  shadow.frag  shadow.vert  test.vert
hw0/src/: MyMath.h  main.cpp
hw0/src/Actor/: CameraActor.cpp  CameraActor.h  MarryActor.cpp  MarryActor.h
hw0/src/Component/: MeshComponent.cpp  MeshComponent.h  MoveComponent.cpp
hw0/src/Core/: Component.cpp  Game.cpp  Renderer.cpp  Renderer.h
hw0/src/Object/: Light.cpp  Light.h  Material.cpp  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
hw0/src/Shader/: Shader.cpp  Shader.h  VertexArray.cpp
hw1/: CMakeLists.txt  hw1.vcxproj  hw1.vcxproj.filters
hw1/shaders/hw1/: phong.frag
hw1/src/: MyMath.h  head.h  main.cpp
hw1/src/Actor/: CameraActor.cpp  CameraActor.h  FloorActor.cpp  FloorActor.h  LightActor.cpp  LightActor.h  MarryActor.cpp  MarryActor.h
hw1/src/Component/: FrameBufferComponent.cpp  FrameBufferComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  MoveComponent.cpp  MoveComponent.h
hw1/src/Core/: Actor.cpp  Actor.h  Component.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h
hw1/src/Object/: Light.cpp  Light.h  Material.h  SVertex.h  Texture.cpp  Texture.h
hw1/src/Shader/: FrameBuffer.cpp  FrameBuffer.h  Shader.cpp  Shader.h  VertexArray.h
hw1/src/UI/: Gui.cpp  Gui.h
shaders/hw1/: light.frag  light.vert  phong.frag  phong.vert  shadow.frag  shadow.vert
